force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Facture</label>
    <nameField>
        <label>Nom de la facture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>