force-app/main/default/objects/Invoice__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annonceur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Factures (Annonceur)</relationshipLabel>
    <relationshipName>AdvertiserInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>