force-app/main/default/objects/Invoice__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Factures (Agence)</relationshipLabel>
    <relationshipName>AgencyInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>