force-app/main/default/objects/Invoice__c/fields/AgencyNotInvoiced__c.field-meta.xml
<CustomField>
    <fullName>AgencyNotInvoiced__c</fullName>
    <formula>IF( 
 ISPICKVAL( Opportunity__r.InvoicedAccount__c, &quot;Annonceur&quot;) &amp;&amp; NOT(ISBLANK( Opportunity__r.Agency__c )), 
 Opportunity__r.Agency__r.SapCode__c , 
 &quot;&quot;
)</formula>
    <label>Mandataire non Payeur</label>
    <type>Text</type>
</CustomField>