force-app/main/default/objects/Invoice__c/fields/Avoir__c.field-meta.xml
<CustomField>
    <fullName>Avoir__c</fullName>
    <formula>NOT(ISBLANK( OriginalInvoiceNumber__c ))</formula>
    <label>Avoir ?</label>
    <type>Checkbox</type>
</CustomField>