force-app/main/default/objects/Invoice__c/fields/BillingEntity__c.field-meta.xml
<CustomField>
    <fullName>BillingEntity__c</fullName>
    <formula>Opportunity__r.BillingEntity__r.Name</formula>
    <label>Entité de facturation</label>
    <type>Text</type>
</CustomField>