force-app/main/default/objects/Invoice__c/fields/Code_GNX__c.field-meta.xml
<CustomField>
    <fullName>Code_GNX__c</fullName>
    <formula>Account__r.GenerixCode__c</formula>
    <label>Code GNX</label>
    <type>Text</type>
</CustomField>