force-app/main/default/objects/Invoice__c/fields/DataAmount__c.field-meta.xml
<CustomField>
    <fullName>DataAmount__c</fullName>
    <label>Coût Data</label>
    <summarizedField>InvoiceItem__c.TotalExcludingVat__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceItem__c.ItemType__c</field>
        <operation>equals</operation>
        <value>Data</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>