force-app/main/default/objects/Invoice__c/fields/DataPrice__c.field-meta.xml
<CustomField>
    <fullName>DataPrice__c</fullName>
    <formula>(DataAmount__c / DataVolume__c) * 1000</formula>
    <inlineHelpText>Coût data / Volume data</inlineHelpText>
    <label>CPM Data</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>