force-app/main/default/objects/Invoice__c/fields/DataVolume__c.field-meta.xml
<CustomField>
    <fullName>DataVolume__c</fullName>
    <label>Volume Data</label>
    <summarizedField>InvoiceItem__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceItem__c.ItemType__c</field>
        <operation>equals</operation>
        <value>Data</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>