force-app/main/default/objects/Invoice__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Opportunity__r.CampaignEndDate__c</formula>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>