force-app/main/default/objects/Invoice__c/fields/FeesRate__c.field-meta.xml
<CustomField>
    <fullName>FeesRate__c</fullName>
    <formula>Opportunity__r.FeesRate__c</formula>
    <label>Taux frais plateforme</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>