force-app/main/default/objects/Invoice__c/fields/Frais__c.field-meta.xml
<CustomField>
    <fullName>Frais__c</fullName>
    <formula>text(  Opportunity__r.TechnicalFeesInvoicing__c  )</formula>
    <label>Frais</label>
    <type>Text</type>
</CustomField>