force-app/main/default/objects/Invoice__c/fields/InvoicedContact__c.field-meta.xml
<CustomField>
    <fullName>InvoicedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Payeur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Factures</relationshipLabel>
    <relationshipName>Factures</relationshipName>
    <type>Lookup</type>
</CustomField>