force-app/main/default/objects/Invoice__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <externalId>true</externalId>
    <label>N° Facture</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>