force-app/main/default/objects/Invoice__c/fields/InvoiceTerm__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTerm__c</fullName>
    <label>Date d&apos;échéance</label>
    <type>Date</type>
</CustomField>