force-app/main/default/objects/Invoice__c/fields/isTechFees__c.field-meta.xml
<CustomField>
    <fullName>isTechFees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture Frais Tech</label>
    <type>Checkbox</type>
</CustomField>