force-app/main/default/objects/Invoice__c/fields/MediaPrice__c.field-meta.xml
<CustomField>
    <fullName>MediaPrice__c</fullName>
    <formula>(MediaAmount__c / MediaVolume__c) * 1000</formula>
    <inlineHelpText>Coût média / Volume média</inlineHelpText>
    <label>CPM Média</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>