force-app/main/default/objects/Invoice__c/fields/MediaVolume__c.field-meta.xml
<CustomField>
    <fullName>MediaVolume__c</fullName>
    <label>Impressions</label>
    <summarizedField>InvoiceItem__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceItem__c.ItemType__c</field>
        <operation>equals</operation>
        <value>Média</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>