force-app/main/default/objects/Invoice__c/fields/OI_Number__c.field-meta.xml
<CustomField>
    <fullName>OI_Number__c</fullName>
    <formula>Opportunity__r.AutoOppId__c</formula>
    <label>Numéro d&apos;opportunité</label>
    <type>Text</type>
</CustomField>