force-app/main/default/objects/Invoice__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <formula>CASE( Opportunity__r.RecordType.DeveloperName ,
&quot;Open_Order&quot; , &quot;Open Order&quot;,
&quot;Sales&quot;, &quot;Ordre d&apos;insertion&quot;,
null
)</formula>
    <label>Type d&apos;opportunité</label>
    <type>Text</type>
</CustomField>