force-app/main/default/objects/Invoice__c/fields/OriginalInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginalInvoiceNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Facture annulée d&apos;où provient l&apos;avoir</inlineHelpText>
    <label>Facture d&apos;origine</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>Factures</relationshipName>
    <type>Lookup</type>
</CustomField>