force-app/main/default/objects/Invoice__c/fields/Payeur_opp__c.field-meta.xml
<CustomField>
    <fullName>Payeur_opp__c</fullName>
    <formula>text( Opportunity__r.InvoicedAccount__c )</formula>
    <label>Payeur opp</label>
    <type>Text</type>
</CustomField>