force-app/main/default/objects/Invoice__c/fields/ProvisionNumber__c.field-meta.xml
<CustomField>
    <fullName>ProvisionNumber__c</fullName>
    <label>Numéro de compteur</label>
    <type>AutoNumber</type>
</CustomField>