force-app/main/default/objects/Invoice__c/fields/ProvisionSent__c.field-meta.xml
<CustomField>
    <fullName>ProvisionSent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatiquement coché quand envoyé en provision</inlineHelpText>
    <label>Envoyé en provision</label>
    <type>Checkbox</type>
</CustomField>