force-app/main/default/objects/Invoice__c/fields/Sales_OI__c.field-meta.xml
<CustomField>
    <fullName>Sales_OI__c</fullName>
    <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName</formula>
    <label>Commercial OI</label>
    <type>Text</type>
</CustomField>