force-app/main/default/objects/Invoice__c/fields/SAP_Advertizer__c.field-meta.xml
<CustomField>
    <fullName>SAP_Advertizer__c</fullName>
    <formula>Advertiser__r.SapCode__c</formula>
    <label>SAP Annonceur</label>
    <type>Text</type>
</CustomField>