force-app/main/default/objects/Invoice__c/fields/SAP_Agency__c.field-meta.xml
<CustomField>
    <fullName>SAP_Agency__c</fullName>
    <formula>Agency__r.SapCode__c</formula>
    <label>SAP Agence</label>
    <type>Text</type>
</CustomField>