force-app/main/default/objects/Invoice__c/fields/SentInvoice__c.field-meta.xml
<CustomField>
    <fullName>SentInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatiquement coché quand envoyé en facture</inlineHelpText>
    <label>Envoyé en facture</label>
    <type>Checkbox</type>
</CustomField>