force-app/main/default/objects/Invoice__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Opportunity__r.CampaignStartDate__c</formula>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>