force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>validated</fullName>
                <label>Validée</label>
            </value>
            <value>
                <fullName>canceled</fullName>
                <label>Annulée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>