force-app/main/default/objects/Invoice__c/fields/TotalExcludingVat__c.field-meta.xml
<CustomField>
    <fullName>TotalExcludingVat__c</fullName>
    <label>Total HT</label>
    <summarizedField>InvoiceItem__c.TotalExcludingVat__c</summarizedField>
    <summaryForeignKey>InvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>