force-app/main/default/objects/Invoice__c/fields/TotalWithVat__c.field-meta.xml
<CustomField>
    <fullName>TotalWithVat__c</fullName>
    <formula>(TotalExcludingVat__c *  VatRate__c) + TotalExcludingVat__c</formula>
    <label>Total TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>