force-app/main/default/objects/Invoice__c/fields/TVA__c.field-meta.xml
<CustomField>
    <fullName>TVA__c</fullName>
    <formula>text( Account__r.VatType__c ) &amp; &quot; %&quot;</formula>
    <label>TVA payeur</label>
    <type>Text</type>
</CustomField>