force-app/main/default/objects/Invoice__c/fields/VatRate__c.field-meta.xml
<CustomField>
    <fullName>VatRate__c</fullName>
    <label>Taux de TVA</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>