force-app/main/default/objects/Invoice__c/validationRules/Annulation_Proforma.validationRule-meta.xml
<ValidationRule>
    <fullName>Annulation_Proforma</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &quot;canceled&quot;),
 ISPICKVAL( PRIORVALUE( Status__c) , &quot;draft&quot;)
) &amp;&amp; NOT($Setup.lazyLoading__c.DisableValidationRule__c)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Vous ne pouvez pas annuler une facture brouillon</errorMessage>
</ValidationRule>