force-app/main/default/objects/Invoice__c/validationRules/CancelledInvoice_beforeSAP.validationRule-meta.xml
<ValidationRule>
    <fullName>CancelledInvoice_beforeSAP</fullName>
    <active>true</active>
    <errorConditionFormula>InvoiceDate__c = TODAY()
&amp;&amp; ISPICKVAL( PRIORVALUE( Status__c ), &quot;validated&quot; )
&amp;&amp; ISCHANGED( Status__c )
&amp;&amp; ISPICKVAL( Status__c , &quot;canceled&quot; )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Vous ne pouvez pas valider puis annuler une facture le même jour</errorMessage>
</ValidationRule>