force-app/main/default/objects/Invoice__c/validationRules/Invalid_BillingCountry.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_BillingCountry</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c, &quot;validated&quot;),
 ISBLANK ( Account__r.BillingCountry ),
 $User.Id &lt;&gt; &quot;0052p000008mZxs&quot; /*Isochronix*/
)&amp;&amp; NOT($Setup.lazyLoading__c.DisableValidationRule__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Le pays de Facturation du compte doit être renseigné</errorMessage>
</ValidationRule>