force-app/main/default/objects/Invoice__c/validationRules/Invalid_Postal_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Postal_Code</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND (
ISPICKVAL( Status__c, &quot;validated&quot;),
Account__r.BillingCountry == &quot;France&quot;,
LEN(Account__r.BillingPostalCode) &lt;&gt; 5
)
,
AND (
ISPICKVAL( Status__c, &quot;validated&quot;),
Account__r.BillingCountry &lt;&gt; &quot;France&quot;,
LEN(Account__r.BillingPostalCode) &gt; 10
)
)&amp;&amp; NOT($Setup.lazyLoading__c.DisableValidationRule__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Le code postal de facturation du compte est invalide (5 caractère pour la France et 17 caractères maximum pour les autres pays).</errorMessage>
</ValidationRule>