force-app/main/default/objects/Invoice__c/validationRules/Invalid_Siret.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Siret</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c, &quot;validated&quot;), 
 Account__r.BillingCountry == &quot;France&quot;,
 LEN( Account__r.Siret__c ) &lt;&gt; 14
)&amp;&amp; NOT($Setup.lazyLoading__c.DisableValidationRule__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Le Siret du compte doit faire 14 caractères</errorMessage>
</ValidationRule>