force-app/main/default/objects/Invoice__c/validationRules/Invalid_VAT_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_VAT_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c, &quot;validated&quot;),
OR(

 ISPICKVAL(Account__r.BillingCountryCode, &quot;DE&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[DE]{2}[0-9]{9}&quot;)),

 ISPICKVAL(Account__r.BillingCountryCode, &quot;AT&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[ATU]{2}[0-9]{8}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;BE&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[BE]{2}[0-9]{10}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;CY&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[CY]{2}[0-9]{8}[K]{1}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;HR&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[HR]{2}[0-9]{11}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;DK&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[DK]{2}[0-9]{8}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;EE&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[EE]{2}[0-9]{9}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;FI&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[FI]{2}[0-9]{8}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;FR&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[FR]{2}[0-9]{11}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;GR&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[EL]{2}[0-9]{9}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;IT&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[IT]{2}[0-9]{11}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;LV&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[LV]{2}[0-9]{11}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;LU&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[LU]{2}[0-9]{8}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;MT&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[MT]{2}[0-9]{8}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;PL&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[PL]{2}[0-9]{10}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;PT&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[PT]{2}[0-9]{9}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;RO&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[RO]{2}[0-9]{9}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[RO]{2}[0-9]{7}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;SK&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[SK]{2}[0-9]{10}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;SI&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[SI]{2}[0-9]{8}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;SE&quot;) &amp;&amp; 
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[SE]{2}[0-9]{12}&quot;))

))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Le N° TVA Intracommunautaire du compte est invalide</errorMessage>
</ValidationRule>