force-app/main/default/objects/Invoice__c/validationRules/Invalid_VAT_Number_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_VAT_Number_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Status__c, &quot;validated&quot;), 

OR( 
ISPICKVAL(Account__r.BillingCountryCode, &quot;IE&quot;) &amp;&amp; 
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[IE]{2}[0-9]{7}[L]{1}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[IE]{2}[0-9]{7}[WI]{2}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[IE]{2}[0-9]{7}[D]{1}&quot;))&amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[IE]{2}[0-9]{7}[JH]{2}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;CZ&quot;) &amp;&amp; 
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[CZ]{2}[0-9]{8}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[CZ]{2}[0-9]{9}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[CZ]{2}[0-9]{10}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;GB&quot;) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[GB]{2}[0-9]{9}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[GB]{2}[0-9]{12}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[GBGD]{4}[0-9]{3}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[GBHA]{4}[0-9]{3}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;LT&quot;) &amp;&amp;  
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[LT]{2}[0-9]{9}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[LT]{2}[0-9]{12}&quot;)),


ISPICKVAL(Account__r.BillingCountryCode, &quot;BG&quot;) &amp;&amp; 
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[BG]{2}[0-9]{9}&quot;)) &amp;&amp;
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[BG]{2}[0-9]{10}&quot;)),


ISPICKVAL(Account__r.BillingCountryCode, &quot;NL&quot;) &amp;&amp; 
	NOT(REGEX(Account__r.IntracomVatNumber__c, &quot;[NL]{2}[0-9]{9}[B]{1}[0-9]{2}&quot;)),

ISPICKVAL(Account__r.BillingCountryCode, &quot;ES&quot;) &amp;&amp; 
	REGEX(Account__r.IntracomVatNumber__c, &quot;[ES]{2}[0-9]{1}[0-9]{7}[0-9]{1}&quot;) 

))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Le N° TVA Intracommunautaire du compte est invalide</errorMessage>
</ValidationRule>