force-app/main/default/objects/Invoice__c/validationRules/Mandatory_BU.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_BU</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( BU__c , &quot;&quot;),
ISPICKVAL( Status__c , &quot;validated&quot; ),
ISCHANGED( Status__c )
)&amp;&amp; NOT($Setup.lazyLoading__c.DisableValidationRule__c)</errorConditionFormula>
    <errorDisplayField>BU__c</errorDisplayField>
    <errorMessage>La BU doit être renseignée</errorMessage>
</ValidationRule>