force-app/main/default/objects/Invoice__c/validationRules/Recovery_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Recovery_Accounts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Account__r.Recovery__c = true,
 ISBLANK( Opportunity__r.CustomerReference__c )
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Le champ Réf. Client (Opportunité) doit être rempli pour ce payeur.</errorMessage>
</ValidationRule>