force-app/main/default/objects/Invoice__c/validationRules/Validated_Cancelled_Invoices.validationRule-meta.xml
<ValidationRule>
    <fullName>Validated_Cancelled_Invoices</fullName>
    <active>false</active>
    <errorConditionFormula>OR(

AND(
ISPICKVAL( PRIORVALUE(Status__c),&quot;canceled&quot;),
ISCHANGED(Status__c)
)
,
AND(
ISPICKVAL( PRIORVALUE(Status__c),&quot;validated&quot;),
NOT( ISPICKVAL(Status__c ,&quot;canceled&quot;)),
ISCHANGED(Status__c)
)
)&amp;&amp; NOT($Setup.lazyLoading__c.DisableValidationRule__c)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Vous ne pouvez pas modifier le statut de cette facture</errorMessage>
</ValidationRule>