force-app/main/default/objects/Invoice__c/listViews/Factures_valider.listView-meta.xml
<ListView>
    <fullName>Factures_valider</fullName>
    <columns>Opportunity__c</columns>
    <columns>OI_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Sales_OI__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Code_GNX__c</columns>
    <columns>NAME</columns>
    <columns>TotalExcludingVat__c</columns>
    <columns>Status__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>ProvisionSent__c</columns>
    <columns>SentInvoice__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>draft</value>
    </filters>
    <label>Factures à valider</label>
</ListView>